tablet: Fix close button can be partially visible
depending on the tablet's screen size, the close button
is placed at the very right and it may become partially
visible because notebookvar-tabs-container can take up
more space than needed. We can make it a bit more smaller
to fit the items right.

--- a/browser/css/device-tablet.css
+++ b/browser/css/device-tablet.css
@@ -98,7 +98,7 @@
 	-ms-flex-wrap: nowrap;
 	flex-wrap: nowrap;
 	word-wrap: nowrap;
-	max-width: 60%;
+	max-width: 50%;
 }
 
 .main-nav.readonly.hasnotebookbar .notebookbar-tabs-container {
